--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,20 @@
 # SmartStay Backend Environment Variables
 
+# AI Provider (groq or gemini)
+AI_PROVIDER=groq
+
+# Groq API Key (Get from https://console.groq.com)
+GROQ_API_KEY=your_groq_api_key_here
+
 # Gemini API Key (Get from https://makersuite.google.com/app/apikey)
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Optional: Google Maps API Key for accurate travel time
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+# OpenRouteService API Key for travel time (Get from https://openrouteservice.org)
+OPENROUTE_API_KEY=your_openroute_api_key_here
+
+# Supabase Configuration (for database operations via REST API)
+SUPABASE_URL=your_supabase_project_url_here
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # Flask Configuration
 FLASK_ENV=development
